--- a/style.css
+++ b/style.css
@@ -52,14 +52,14 @@ body {
   outline: 0;
 }
 
-.remenber-me {
+.remember-me {
   display: flex;
   margin-top: 10px;
   gap: 10px;
   align-items: center;
 }
 
-.remenber-me input {
+.remember-me input {
   appearance: none;
   width: 25px;
   height: 25px;
@@ -67,7 +67,7 @@ body {
   border-radius: 5px;
 }
 
-.remenber-me input:checked {
+.remember-me input:checked {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0,0,256,256' width='20px' height='20px' fill-rule='nonzero'%3E%3Cg fill='%23ffffff' fill-rule='nonzero' stroke='none' stroke-width='1' stroke-linecap='butt' stroke-linejoin='miter' stroke-miterlimit='10' stroke-dasharray='' stroke-dashoffset='0' font-family='none' font-weight='none' font-size='none' text-anchor='none' style='mix-blend-mode: normal'%3E%3Cg transform='scale(10.66667,10.66667)'%3E%3Cpath d='M20.29297,5.29297l-11.29297,11.29297l-4.29297,-4.29297l-1.41406,1.41406l5.70703,5.70703l12.70703,-12.70703z'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   background-color: #ed5684;
   background-position: center;
